[package]
name = "tapper"
version = "0.1.0"
authors = ["Jonathan E. Magen <yonkeltron@gmail.com>"]
description = "Command-line Test Anything Protocol (TAP) generator"
edition = "2018"
readme = "README.adoc"
homepage = "https://github.com/yonkeltron/tapper"
repository = "https://github.com/yonkeltron/tapper"

[[bin]]
name = "tapper"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
testanything = "0.1.2"
